# Learning-OpenGL

./: CMakeLists.txt  LICENSE.txt  README.md  main.cpp
src/: CMakeLists.txt  initialize.cpp  initialize.h  main.cpp
